# lib-rpg

./: .gitignore  Cargo.toml  README.md
.claude/: settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md  Readme.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: code-coverage.yml  doc-generator.yml  github-pages.yml  jekyll-gh-pages.yml  test.yml
docs/: .~lock.attaque.docx#  architecture.md  ~$LOTR.xlsx  ~$ttaque.docx
offlines/characters/: Angmar.json  Angmar10PV.json  Azrak Ombresang.json  Champion Orc.json  Elara la guerisseuse de la Lorien.json  Gobelin Eclaireur.json  Nazgul.json  Necromancien du Mordor.json  Orc Pillard.json  Sauron l'Oeil Flamboyant.json  Thalia.json  Thraïn.json  test boss.json  test.json  test2.json
offlines/maps/: pallet_town.json
offlines/scenarios/: stage_1.json  stage_2.json
src/: attack_type.rs  attaque.rs  attaque_type.rs  buffers.rs  character.rs  common.rs  data_manager.rs  effect.rs  equipment.rs  game_manager.rs  game_state.rs  lib.rs  loot.rs  players_manager.rs  powers.rs  stats.rs  stats_in_game.rs  target.rs  target_info.rs  testing_all_characters.rs  testing_atk.rs  testing_effect.rs  testing_target.rs  utils.rs
src/character_mod/: attack_type.rs  buffers.rs  character.rs  class.rs  effect.rs  energy.rs  equipment.rs  experience.rs  fight_information.rs  inventory.rs  loot.rs  mod.rs  phase.rs  power.rs  rank.rs  rounds_information.rs  stats.rs  stats_in_game.rs  target.rs
src/common/: constants.rs  log_data.rs  mod.rs  overworld.rs
src/server/: core_game_data.rs  data_manager.rs  end_of_scenario.rs  game_manager.rs  game_paths.rs  game_state.rs  mod.rs  players_manager.rs  (+3 more)
tests/: test.json
(+1489 files in other folders)
