[package]
name = "lib-rpg"
version = "1.2.0"
authors = [""]
edition = "2018"

[profile.release]
debug = true
panic = "abort"

[profile.dev]
panic = "abort"
opt-level = 0

[dependencies]
anyhow = "1.0.100"
chrono = "0.4.42"
indexmap = { version = "2.12.1", features = ["serde"] }
lazy_static = "1.5.0"
rand = "0.9.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"

[lints.rust]
 unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin_include)'] }

