[package]
name = "lib-rpg"
version = "1.3.0"
authors = [""]
edition = "2024"

[profile.release]
debug = true
panic = "abort"

[profile.dev]
panic = "abort"
opt-level = 0

[dependencies]
anyhow = "1.0.101"
chrono = "0.4.44"
indexmap = { version = "2.13.0", features = ["serde"] }
lazy_static = "1.5.0"
rand = "0.9.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tracing = "0.1.44"

[lints.rust]
 unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin_include)'] }

