[package]
name = "lib-rpg"
version = "1.4.1"
authors = [""]
edition = "2024"

[profile.release]
debug = true
panic = "abort"

[profile.dev]
panic = "abort"
opt-level = 0

[dependencies]
anyhow = "1.0.101"
chrono = "0.4.44"
indexmap = { version = "2.13.1", features = ["serde"] }
lazy_static = "1.5.0"
rand = "0.10.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
strum = "0.28.0"
strum_macros = "0.28.0"
tracing = "0.1.44"

[lints.rust]
 unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin_include)'] }

